examples/typechecking/functor_and_monad.an

trait Functor f =
    map: fn (f a) (fn a -> b) -> f b

trait Monad m =
    wrap: fn a -> m a
    bind: fn (m a) (fn a -> m b) -> m b


implicit functor_maybe: Functor Maybe = Functor fn m f ->
    match m
    | Some x -> Some (f x)
    | None -> None

implicit monad_maybe: Monad Maybe =
    Monad
        (fn a -> Some a)
        (fn m f ->
            match m
            | Some x -> f x
            | None -> None)

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// type Functor f =
//     map: fn (f a) (fn a -> b) [Ptr Unit] -> f b
// 
// type Monad m =
//     wrap: fn a [Ptr Unit] -> m a
//     bind: fn (m a) (fn a -> m b) [Ptr Unit] -> m b
// 
// implicit (functor_maybe: Functor Maybe) = (Functor: fn (fn (error) (fn (error) -> (error) pure) [Ptr Unit] -> (error) pure) -> Functor Maybe pure) (fn (m: (error)) (f: fn (error) -> (error) pure) ->
//     match (m: (error))
//     | (Some: (error)) (x: (error)) -> (Some: (error)) ((f: fn (error) -> (error) pure) (x: (error)))
//     | (None: (error)) -> (None: (error)))
// 
// implicit (monad_maybe: Monad Maybe) =
//     (Monad: fn (fn (error) [Ptr Unit] -> (error) pure) (fn (error) (fn (error) -> (error) pure) [Ptr Unit] -> (error) pure) -> Monad _ pure) (fn (a: _) -> (Some: (error)) (a: _))

// expected stderr:
// examples/typechecking/functor_and_monad.an:3:13
// 2 | trait Functor f =
// 3 |     map: fn (f a) (fn a -> b) -> f b	// error: Expected 0 arguments but found 1
//   |             ^^^^^
// 
// examples/typechecking/functor_and_monad.an:3:16
// 2 | trait Functor f =
// 3 |     map: fn (f a) (fn a -> b) -> f b	// error: `a` not found in scope
//   |                ^
// 
// examples/typechecking/functor_and_monad.an:3:23
// 2 | trait Functor f =
// 3 |     map: fn (f a) (fn a -> b) -> f b	// error: `a` not found in scope
//   |                       ^
// 
// examples/typechecking/functor_and_monad.an:3:28
// 2 | trait Functor f =
// 3 |     map: fn (f a) (fn a -> b) -> f b	// error: `b` not found in scope
//   |                            ^
// 
// examples/typechecking/functor_and_monad.an:3:34
// 2 | trait Functor f =
// 3 |     map: fn (f a) (fn a -> b) -> f b	// error: Expected 0 arguments but found 1
//   |                                  ^^^
// 
// examples/typechecking/functor_and_monad.an:3:36
// 2 | trait Functor f =
// 3 |     map: fn (f a) (fn a -> b) -> f b	// error: `b` not found in scope
//   |                                    ^
// 
// examples/typechecking/functor_and_monad.an:6:14
// 5 | trait Monad m =
// 6 |     wrap: fn a -> m a	// error: `a` not found in scope
//   |              ^
// 7 |     bind: fn (m a) (fn a -> m b) -> m b
// 
// examples/typechecking/functor_and_monad.an:6:19
// 5 | trait Monad m =
// 6 |     wrap: fn a -> m a	// error: Expected 0 arguments but found 1
//   |                   ^^^
// 7 |     bind: fn (m a) (fn a -> m b) -> m b
// 
// examples/typechecking/functor_and_monad.an:6:21
// 5 | trait Monad m =
// 6 |     wrap: fn a -> m a	// error: `a` not found in scope
//   |                     ^
// 7 |     bind: fn (m a) (fn a -> m b) -> m b
// 
// examples/typechecking/functor_and_monad.an:7:14
// 6 |     wrap: fn a -> m a
// 7 |     bind: fn (m a) (fn a -> m b) -> m b	// error: Expected 0 arguments but found 1
//   |              ^^^^^
// 
// examples/typechecking/functor_and_monad.an:7:17
// 6 |     wrap: fn a -> m a
// 7 |     bind: fn (m a) (fn a -> m b) -> m b	// error: `a` not found in scope
//   |                 ^
// 
// examples/typechecking/functor_and_monad.an:7:24
// 6 |     wrap: fn a -> m a
// 7 |     bind: fn (m a) (fn a -> m b) -> m b	// error: `a` not found in scope
//   |                        ^
// 
// examples/typechecking/functor_and_monad.an:7:29
// 6 |     wrap: fn a -> m a
// 7 |     bind: fn (m a) (fn a -> m b) -> m b	// error: Expected 0 arguments but found 1
//   |                             ^^^
// 
// examples/typechecking/functor_and_monad.an:7:31
// 6 |     wrap: fn a -> m a
// 7 |     bind: fn (m a) (fn a -> m b) -> m b	// error: `b` not found in scope
//   |                               ^
// 
// examples/typechecking/functor_and_monad.an:7:37
// 6 |     wrap: fn a -> m a
// 7 |     bind: fn (m a) (fn a -> m b) -> m b	// error: Expected 0 arguments but found 1
//   |                                     ^^^
// 
// examples/typechecking/functor_and_monad.an:7:39
// 6 |     wrap: fn a -> m a
// 7 |     bind: fn (m a) (fn a -> m b) -> m b	// error: `b` not found in scope
//   |                                       ^
// 
// examples/typechecking/functor_and_monad.an:10:33
//    | // error: Expected a type here, this type constructor is missing 1 argument
// 10 | implicit functor_maybe: Functor Maybe = Functor fn m f ->
//    |                                 ^^^^^
// 11 |     match m
// 
// examples/typechecking/functor_and_monad.an:12:7
// 11 |     match m
// 12 |     | Some x -> Some (f x)	// error: `Some` not found in scope
//    |       ^^^^
// 13 |     | None -> None
// 
// examples/typechecking/functor_and_monad.an:12:17
// 11 |     match m
// 12 |     | Some x -> Some (f x)	// error: `Some` not found in scope
//    |                 ^^^^
// 13 |     | None -> None
// 
// examples/typechecking/functor_and_monad.an:13:7
// 12 |     | Some x -> Some (f x)
// 13 |     | None -> None	// error: `None` not found in scope
//    |       ^^^^
// 
// examples/typechecking/functor_and_monad.an:13:15
// 12 |     | Some x -> Some (f x)
// 13 |     | None -> None	// error: `None` not found in scope
//    |               ^^^^
// 
// examples/typechecking/functor_and_monad.an:15:29
//    | // error: Expected a type here, this type constructor is missing 1 argument
// 15 | implicit monad_maybe: Monad Maybe =
//    |                             ^^^^^
// 16 |     Monad
// 
// examples/typechecking/functor_and_monad.an:16:5
// 15 | implicit monad_maybe: Monad Maybe =
//    |     // error: This is called as if it were a fn _ => _ but it has type fn (fn (error) => (error) pure) (fn (error) (fn (error) -> (error) pure) => (error) pure) -> Monad _ pure
// 16 |     Monad
//    |     ^^^^^
// 17 |         (fn a -> Some a)
// 
// examples/typechecking/functor_and_monad.an:17:18
// 16 |     Monad
// 17 |         (fn a -> Some a)	// error: `Some` not found in scope
//    |                  ^^^^
// 18 |         (fn m f ->
// 
// examples/typechecking/functor_and_monad.an:18:9
// 17 |         (fn a -> Some a)
// 18 |         (fn m f ->	// error: Expected the end of this block but found `(`
//    |         ^
// 19 |             match m
// 
// examples/typechecking/functor_and_monad.an:21:27
// 20 |             | Some x -> f x
// 21 |             | None -> None)	// error: Expected the end of this block but found `)`
//    |                           ^
// 
// examples/typechecking/functor_and_monad.an:189:1
// 189 | 	// error: Expected a top-level item but found an unindent
//     | 
// 
// Found 27 errors and 0 warnings

